revision to the master

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
 			<input type="text" placeholder="Enter your email address">
 			<input type="text" placeholder="Password">
 			<input class="button-primary" type="submit" value="TRY IT NOW!">
-			<div class="button" onmouseover="hoverOver(this)" onmouseout="unHover(this)">Hover Over Me</div>
-			</div>
+			
 
 			<h5 class="trial1">Already a member?<span style="color:#3dcb3d"><u>Log In</u>
 			</span></h5>
@@ -161,7 +160,7 @@
 		<div id="footer">
 		<div class="container">
 		<div class="four columns">
-		<img src="images/Jottly_logo.png" width="150px">
+		<img src="images/jottly_logo.png" width="150px">
 		</div>
 
 		<div class="four columns">
@@ -196,6 +195,6 @@
 		<p>123 Main Street, Boulder, CO, 27345 | 809.123.5554 | 2014 Copyright, Jottly.com.  All Rights Reserved</p>
 		</footer>
 
-		<script src="js/app.js"></script>
+		
 	</body>
 	</html>
